--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
                         <span class = "sr-only">Facebook</span>
                     </a>
                 </li>
-                li class="list-inline-item">
+                <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                         <span class = "sr-only">Twitter</span>
                     </a>
                 </li>
-                li class="list-inline-item">
+                <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                         <span class = "sr-only">Linkedin</span>
                     </a>
                 </li>
-                li class="list-inline-item">
+                <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fa fa-pinterest" aria-hidden="true"></i>
                         <span class = "sr-only">Pinterest</span>
                     </a>
                 </li>
-                li class="list-inline-item">
+                <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                         <span class = "sr-only">instagram</span>
