--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/f012b4df15.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" type="text/css" />
     <title>Robin</title>
 </head>
@@ -69,31 +70,31 @@
                 <ul class="list-inline social-links"></ul>
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
                         <span class = "sr-only">Facebook</span>
                     </a>
                 </li>
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
                         <span class = "sr-only">Twitter</span>
                     </a>
                 </li>
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
                         <span class = "sr-only">Linkedin</span>
                     </a>
                 </li>
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
-                        <i class="fa fa-pinterest" aria-hidden="true"></i>
+                        <i class="fab fa-pinterest" aria-hidden="true"></i>
                         <span class = "sr-only">Pinterest</span>
                     </a>
                 </li>
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
                         <span class = "sr-only">instagram</span>
                     </a>
                 </li>
