--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     </section>
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row" >
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block"> Full Stack Web Developer. Skilled in Python HTML, CSS, JavaScript</p>
@@ -67,13 +67,14 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
-                <ul class="list-inline social-links"></ul>
+                <ul class="list-inline social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fab fa-facebook-f" aria-hidden="true"></i>
                         <span class = "sr-only">Facebook</span>
                     </a>
                 </li>
+                
                 <li class="list-inline-item">
                     <a target="_blank" href="#">
                         <i class="fab fa-twitter" aria-hidden="true"></i>
@@ -98,7 +99,7 @@
                         <span class = "sr-only">instagram</span>
                     </a>
                 </li>
-
+                </ul>
             </div>
 
         </div>
