add personal details fix gutter bug

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <header>
+    
         <header>
-            <div class="row">
+            <div class="row no-gutters">
                 <a class="col-md-4 logo" href="index.html"></a>
                 <div class="col-md-8">
-                    <div class="row bg-color-name-title">
+                    <div class="row no-gutters bg-color-name-title">
                         <div class="col heading">
                             <h1 class="name">Robin Oldman</h1>
                             <h2 class="title"> Full Stack Developer</h2>
@@ -48,7 +48,43 @@
             </div>
         </header>
         <section class="container-fluid">
-            <div class="row row-table">
+            <div class="row">
+                <div class="col-md-4 bg-color-personal-info section-column">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="section-heading uppercase">
+                                Personal Info
+                            </h3>
+                        </div>
+
+                    </div>
+                    <div class="personal-info-item">
+                        <div class="key">
+                            <p class="uppercase">
+                                Name:
+                            </p>
+                        </div>
+                        <div class="value uppercase" >
+                            <p>
+                                Robin Oldman
+                            </p>
+                        </div>
+                    </div>
+                 
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value uppercase" >
+                        <p>
+                            robin.c.oldman@gmail.com
+                        </p>
+                    </div>
+                </div>
+                </div>
+                </div>
                 <div class="col-md-8 bg-color-three-reasons section-column">
                     <div class="row">
                         <div class="col">
