add styling to contact section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   Name:
                 </p>
               </div>
-              <div class="value uppercase">
+              <div class="value">
                 <p>
                   Robin Oldman
                 </p>
@@ -76,7 +76,7 @@
                   Email:
                 </p>
               </div>
-              <div class="value uppercase">
+              <div class="value">
                 <p>
                   robin.c.oldman@gmail.com
                 </p>
