--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
@@ -53,41 +53,17 @@
             <div class="row">
               <div class="col-12">
                 <h3 class="section-heading uppercase">
-                  Personal Info
+                  Work History
                 </h3>
               </div>
             </div>
-            <div class="personal-info-item">
-              <div class="key">
-                <p class="uppercase">
-                  Name:
-                </p>
-              </div>
-              <div class="value">
-                <p>
-                  Robin Oldman
-                </p>
-              </div>
-            </div>
-      
-            <div class="personal-info-item">
-              <div class="key">
-                <p class="uppercase">
-                  Email:
-                </p>
-              </div>
-              <div class="value">
-                <p>
-                  robin.c.oldman@gmail.com
-                </p>
-              </div>
-            </div>
+
           </div>
       
           <div class="col-md-8 bg-color-three-reasons section-column">
             <div class="row">
               <div class="col">
-                <h3 class="section-heading uppercase">About Me</h3>
+                <h3 class="section-heading uppercase">My Skills</h3>
               </div>
             </div>
             <div class="row">
