--- a/resume.html
+++ b/resume.html
@@ -70,10 +70,10 @@
               <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                 <div class="row">
                   <div class="col-2">
-                    <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                    <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                   </div>
                   <div class="col-10">
-                    <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                    <h4 class="three-reasons-heading uppercase">Front end</h4>
                     <p>
                       I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                     </p>
@@ -84,31 +84,56 @@
               <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                 <div class="row">
                   <div class="col-2">
-                    <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                    <i class="three-reasons-icon fa fa-cogs" aria-hidden="true"></i>
                   </div>
                   <div class="col-10">
-                    <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                    <h4 class="three-reasons-heading uppercase">Back end</h4>
                     <p>
                       I use a combination of cutting-edge technology and time-tested methods to create robust and reliable software solutions.
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                <div class="row">
-                  <div class="col-2">
-                    <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
-                  </div>
-                  <div class="col-10">
-                    <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                    <p>
-                        I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
-                    </p>
-                  </div>
-                </div>
-              </div>
+              
             </div>
-          </div>
+            <div class="row progress-section">
+            <div class="col">
+            <div class='progress'>
+                <div class="progress-bar" role="progress-bar" aria-valuenow="90" aria-valuemin="0"
+                aria-valuemax="100" style="width:90%";>
+                <span class="sr-only"> 90% complete</span>
+                </div>
+                <span class="progress-type"> HTML/ HTML 5</span>
+            </div>
+            <div class='progress'>
+                <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="80" aria-valuemin="0"
+                aria-valuemax="100" style="width:80%";>
+                <span class="sr-only"> 80% complete</span>
+                </div>
+                <span class="progress-type"> CSS/ CSS3</span>
+            </div>
+            <div class='progress'>
+                <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="60" aria-valuemin="0"
+                aria-valuemax="100" style="width:60%";>
+                <span class="sr-only"> 60% complete</span>
+                </div>
+                <span class="progress-type"> Python</span>
+            </div>
+            <div class='progress'>
+                <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="70" aria-valuemin="0"
+                aria-valuemax="100" style="width:70%";>
+                <span class="sr-only"> 70% complete</span>
+                </div>
+                <span class="progress-type"> JavaScript</span>
+            </div>
+            <div class='progress'>
+                <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="60" aria-valuemin="0"
+                aria-valuemax="100" style="width:60%";>
+                <span class="sr-only"> 60% complete</span>
+                </div>
+                <span class="progress-type"> SQL/NoSQL</span>
+            </div>
+            </div>
         </div>
       </section>
       
