--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,8 @@
                   <div class="col-10">
                     <h4 class="three-reasons-heading uppercase">Front end</h4>
                     <p>
-                      I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                     I'm skilled un User experience and use the Trimity of HTML/CSS/JavaScript. 
+                     I also have extensive experience in Front End Frameworks such as Angular
                     </p>
                   </div>
                 </div>
@@ -89,7 +90,9 @@
                   <div class="col-10">
                     <h4 class="three-reasons-heading uppercase">Back end</h4>
                     <p>
-                      I use a combination of cutting-edge technology and time-tested methods to create robust and reliable software solutions.
+                       I specialize in data driven web applications. Many of my projects 
+                      utilise document-based data. I use Python and Django in conjunction 
+                      with MongoD* to proces and presernt information
                     </p>
                   </div>
                 </div>
