--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comments" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comments" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
@@ -92,7 +92,7 @@
                     <p>
                        I specialize in data driven web applications. Many of my projects 
                       utilise document-based data. I use Python and Django in conjunction 
-                      with MongoD* to proces and presernt information
+                      with MongoD to process and presernt information
                     </p>
                   </div>
                 </div>
