create timeline in resume

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comments" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="./cv/sample-cv.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                         
@@ -49,17 +49,33 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-          <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="col-md-4 bg-color-work-hist section-column">
             <div class="row">
               <div class="col-12">
-                <h3 class="section-heading uppercase">
+                <h3 class="history-heading uppercase">
                   Work History
                 </h3>
               </div>
             </div>
-
+          <div class="history-items">
+          <div class="timeline-item" data-dates="08/2022 - present"> 
+            <h4>Hoppe Opportunity Trust</h4>
+            <p>Project Manager</p>
           </div>
-      
+          <div class="timeline-item" data-dates="09/2018 - 09/2022"> 
+            <h4>Dee Point Primary School</h4>
+            <p>Primary School Teacher and Computing Co-ordinator</p>
+          </div>
+          <div class="timeline-item" data-dates="09/2011 - 09/2018"> 
+            <h4>Mayflower Primary School</h4>
+            <p>Primary School Teacher</p>
+          </div>
+          <div class="timeline-item" data-dates="09/2007 - 04/2010"> 
+            <h4>American Express</h4>
+            <p>German Risk Analysis</p>
+          </div>
+        </div>
+        </div>   
           <div class="col-md-8 bg-color-three-reasons section-column">
             <div class="row">
               <div class="col">
