edit bug with cv upload

--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
             </div>
           <div class="history-items">
           <div class="timeline-item" data-dates="08/2022 - present"> 
-            <h4>Hoppe Opportunity Trust</h4>
+            <h4>Hope Opportunity Trust</h4>
             <p>Project Manager</p>
           </div>
           <div class="timeline-item" data-dates="09/2018 - 09/2022"> 
