--- a/interests.html
+++ b/interests.html
@@ -55,14 +55,15 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-          <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="col-md-4 bg-color-conferences section-column">
             <div class="row">
               <div class="col-12">
                 <h3 class="section-heading uppercase">
-                  
+                  Conference and Meetups attended
                 </h3>
               </div>
             </div>
+            <div id="map"></div>
             <div class="personal-info-item">
               <div class="key">
                 <p class="uppercase">
@@ -196,7 +197,24 @@
 
         </div>
 
-    </footer>
+      </footer>
+     <script>
+      function initMap(){
+          var map = new google.maps.Map(document.getElementById("map"),{
+            zoom:3,
+            center:{
+              lat:46.619261,
+              lng: -33.134766
+            }} );
+        }
+    </script>
+
+
+     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDq2YtGBONjZfPaB96Ap_usRIWUgvERSE&callback=initMap"></script>
+  
+   <script src="assets/js/maps.js"></script>
+
 </body>
 
 </html>
