--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="https://kit.fontawesome.com/f012b4df15.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" type="text/css" />
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script> 
+
+<script type="text/javascript">
+    (function() {
+        emailjs.init("6_E-OIcvAUQuULNRa");
+        emailjs.send("gmail", "template_fnqi4j7", {
+            name: "robin",
+            notes: "The project that I want is..."
+        })
+    })();
+</script>
+
     <title>Robin</title>
 </head>
 
@@ -64,7 +78,7 @@
                     Let's work together
                 </h5>
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name= "name" id="fullname" class="form-control" placeholder="Name" required>
                         <input type="text" name= "email" id="emailaddress" class="form-control" placeholder="email" required>
                         <textarea rows="5" name= "projectsummary" id="projectsummary" class="form-control"
@@ -138,6 +152,7 @@
         </div>
 
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
