modified the email form to send to email

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <script type="text/javascript">
     (function() {
         emailjs.init("6_E-OIcvAUQuULNRa");
-        emailjs.send("gmail", "template_fnqi4j7", {
+        emailjs.send("service_3p1kq4s", "template_fnqi4j7", {
             name: "robin",
             notes: "The project that I want is..."
         })
